Checkstyle fixes.